<resources>
    <string name="app_name">Recetario Ecuatoriano</string>
    <string name="header_description">Platos típicos ecuatorianos</string>
    <string name="main_title">¡Es hora de cocinar!</string>
    <string name="main_subtitle">Únete a nuestra comunidad culinaria</string>
    <string name="start_button">Empieza Ahora</string>
    <string name="filter_results">Filtrar resultados</string>
    <string name="back_button">Regresar</string>
    <string name="add_image">Añadir imagen</string>
    <string name="success">Publiación Exitosa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings">Configuraciones</string>
    <string name="profile_image">Imagen del usuario</string>
    <string name="back">Regresar</string>
    <string name="recipe_image">Imagen de la receta</string>
    <string name="author_image">Imagen del autor</string>
    <string name="rating_star">Calificacion de la receta</string>
    <string name="preparation_time">Tiempo de preparación</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>