<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/header"
        android:contentDescription="@string/header_description"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/main_title"
        android:textAppearance="@style/H1"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:text="@string/main_subtitle"
        android:textAppearance="@style/P1"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSubtitle"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/inter_bold"
        android:text="@string/start_button"
        android:textColor="@color/white" />

</RelativeLayout>
